# systemd-ntfy

./: CHANGELOG.md  cabal.project.local  systemd-ntfy.cabal
.github/workflows/: build.yml
app/: Main.hs  SystemD.hs
