cabal-version:      3.4
name:               systemd-ntfy
version:            0.1.0
synopsis:           Send notifications for systemd units to ntfy.sh
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Michalis Pardalos
maintainer:         me@mpardalos.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable systemd-ntfy
    import:           warnings
    main-is:          Main.hs
    other-modules:
      SystemD
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , dbus == 1.2.29
      , dbus-th == 0.1.3.0
      , safe == 0.3.19
      , containers == 0.6.7
      , wreq == 0.5.4.2
      , bytestring == 0.11.5.2
      , optparse-applicative == 0.18.1.0
    hs-source-dirs:   app
    default-language: GHC2021
